fix style for carousel on smaller screen

--- a/_sass/home/case-studies.scss
+++ b/_sass/home/case-studies.scss
@@ -1,6 +1,6 @@
 .home__case-studies {
     width: var(--container-width);
-    padding: 2.6rem calc((100% - var(--container-width)) / 2);
+    padding: 2.6rem calc((100% - var(--container-width)) / 2) 3.4rem;
     background-color: var(--color-main);
     overflow-x: hidden;
 }
@@ -25,7 +25,7 @@
 }
 
 .flickity-page-dots {
-    bottom: -2.5rem;
+    bottom: -1.2rem;
 }
 
 .flickity-page-dots .dot {
@@ -84,7 +84,7 @@
 
 @media (min-width: 576px) {
     .home__case-studies {
-        padding: 3.2rem calc((100% - var(--container-width)) / 2);
+        padding: 3.2rem calc((100% - var(--container-width)) / 2) 4.2rem;
     }
     .case-studies__card {
         width: calc(var(--column-width) * 3 + var(--container-gap) * 2);
@@ -93,13 +93,16 @@
 
 @media (min-width: 768px) {
     .home__case-studies {
-        padding: 4.8rem calc((100% - var(--container-width)) / 2);
+        padding: 4.8rem calc((100% - var(--container-width)) / 2) 5.4rem;
     }
 }
 
 @media (min-width: 992px) {
     .home__case-studies {
-        padding: 5.8rem calc((100% - var(--container-width)) / 2);
+        padding: 5.8rem calc((100% - var(--container-width)) / 2) 7.2rem;
+    }
+    .flickity-page-dots {
+        bottom: -2.5rem;
     }
     .case-studies__card {
         width: calc(var(--column-width) * 4 + var(--container-gap) * 3);
